# Tiny-Python_Lex-Par

./: AST_classes.cpp  AST_classes.h  CMakeLists.txt  Production Table.ods  grammar.txt  grammar_orig.txt  input.py  lexer.h  main  main.cpp  parser.cpp  parser.h
automatons/: ArithOperators.jff  RelOperators.jff  array_elems.jff  comment.jff  function_elems.jff  ident.jff  literal.jff  number.jff  start.jff  tiny-python.fa2l
